LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Join_Url1__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Join_Url1__c</fullName>
    <label>Join Url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>