LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Join_Url__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Join_Url__c</fullName>
    <label>Join Url (deprecated)</label>
    <type>TextArea</type>
</CustomField>