LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Zoom_Webinar__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Webinar</label>
    <referenceTo>zoom_app__Zoom_Webinar__c</referenceTo>
    <relationshipLabel>Zoom Webinar Registrants</relationshipLabel>
    <relationshipName>Zoom_Webinar_Registrants</relationshipName>
    <type>Lookup</type>
</CustomField>